# crystalia-collector

./: .cspell.json  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .template-eval-id  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.win  LICENSE  Makefile  README.md  build.cmd  checksum.py  cmd_tool.py  collect-metrics.sh  collector.py  collector_test.py  crystalia_ns.py  ds_assertion_gen.py  pyproject.toml  pytest.ini  reader_test.py  setup.py  simple.py  tox.ini
.devcontainer/: devcontainer.json  env_setup.sh
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  python.yml
ci/: build_container.sh
data_model/: Makefile  README.md  config.public.mk  diagram.py  mkdocs.yml  pyproject.toml
data_model/.github/workflows/: deploy-docs.yaml  main.yaml  test_pages_build.yaml
data_model/data/examples/invalid/: Item-001.yaml
data_model/data/examples/output/: Item-001.json  Item-001.nt  Item-001.ttl  Item-001.yaml  Method-MD5.json  Method-MD5.nt  Method-MD5.ttl  Method-MD5.yaml  Method-SHA1.json  Method-SHA1.nt  Method-SHA1.ttl  Method-SHA1.yaml  Method-SHA256.json  Method-SHA256.nt  Method-SHA256.ttl  Method-SHA256.yaml  README.md
data_model/examples/: Pokemon-001.yaml  README.md
data_model/examples/valid/: Item-001.yaml
data_model/misc/: crystalia.context.jsonld  crystalia.jsonld
data_model/project/excel/: crystalia.xlsx
data_model/project/graphql/: crystalia.graphql
data_model/project/jsonld/: crystalia.context.jsonld  crystalia.jsonld
data_model/project/jsonschema/: crystalia.schema.json
data_model/project/owl/: crystalia.owl.ttl
data_model/project/prefixmap/: crystalia.yaml
data_model/project/protobuf/: crystalia.proto
data_model/project/shacl/: crystalia.shacl.ttl
data_model/project/shex/: crystalia.shex
data_model/python/crystalia/: dataclass.py  model.py
data_model/rdf/: crystalia.owl.ttl  crystalia.rdf  crystalia.shacl.ttl
data_model/schema/: crystalia.yaml
data_model/sparql/: CHECK_object_range_Dataset_containsItem.rq  CHECK_object_range_DescribableThing_hasDescriptor.rq  CHECK_object_range_DescriptorType_usesMethod.rq  CHECK_object_range_Descriptor_describes.rq  CHECK_object_range_Descriptor_hasDescriptor.rq  CHECK_object_range_Descriptor_hasType.rq  CHECK_object_range_Item_hasDescriptor.rq  CHECK_permitted_Dataset.rq  CHECK_permitted_DescribableEntity.rq  CHECK_permitted_DescribableThing.rq  CHECK_permitted_Descriptor.rq  CHECK_permitted_DescriptorType.rq  CHECK_permitted_Item.rq  CHECK_permitted_Method.rq  CHECK_permitted_Thing.rq  CHECK_required_Dataset_id.rq  CHECK_required_DescribableEntity_id.rq  CHECK_required_DescribableThing_id.rq  CHECK_required_DescriptorType_id.rq  CHECK_required_DescriptorType_label.rq  CHECK_required_DescriptorType_usesMethod.rq  CHECK_required_Descriptor_coverage.rq  CHECK_required_Descriptor_hasType.rq  CHECK_required_Descriptor_hasValue.rq  CHECK_required_Descriptor_id.rq  CHECK_required_Descriptor_offset.rq  CHECK_required_Descriptor_value.rq  CHECK_required_Item_id.rq  CHECK_required_Item_isPartOf.rq  CHECK_required_Item_label.rq  CHECK_required_Method_id.rq  CHECK_required_Method_label.rq  CHECK_required_Method_robustness.rq  CHECK_required_Thing_id.rq
data_model/templates/docgen-templates/: index.md.jinja2
data_model/templates/docs/: extra.md
data_model/tests/: __init__.py  test_data.py
infrastructure/: Pulumi.crystalia.yaml  Pulumi.yaml  __main__.py  pyproject.toml  pytest.ini
legacy/: build.cmd  cmd_tool.py  collect-metrics.sh  collector.py  crystalia_ns.py  setup.py  simple.py
legacy/test_fixtures/: braces_summary.txt
legacy/test_fixtures/simple_ds1/: gen_ds1.sh
pipelines/: gen_annotations.nf  nextflow.config  report-2gb-cold-1.html  report-2gb-cold-2.html  report-2gb-cold-3.html  report-2gb-hot-1.html  report-8gb-hot-1.html  report-baseline.html  report-merkle-8gb.html  split-letter.nf  timeline-baseline.html  timeline-merkle-2gb-cold-1.html  timeline-merkle-2gb-cold-2.html  timeline-merkle-2gb-cold-3.html  timeline-merkle-2gb-hot-1.html  timeline-merkle-8gb-hot-1.html  timeline-merkle-8gb.html  trace-20241026-69840578.txt  trace-20241026-70232445.txt  trace-20241026-70409834.txt  trace-20241026-71221853.txt  trace-20241026-71492139.txt  trace-baseline.txt  trace-merkle-8gb
src/: ds_assertion_gen.py  readers.py  simple.py
src/crystalia_collector/: __init__.py  app.py  rdf.py  s3_iface.py  util.py  work.py
src/crystalia_collector/method/: generic.py  md5.py  md5_8b.py
test_fixtures/simple_ds1/: lorem_inst.txt
test_fixtures/simple_ds1/ch1/: ch1a.txt
test_fixtures/simple_ds1/ch3/: ch3a.txt
tests/: __init__.py  collector_test.py  conftest.py  test_linkml_models.py  test_s3_iface.py  test_util.py  test_work.py
tests/sample_data/: chr22_small.txt  short_file_single_descriptor.ttl
(+21 files in other folders)
