[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crystalia-collector"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
authors = [
  {name = "Vlad Korolev", email = "vlad@v-lad.org"}
]
maintainers = [
  {name = "Vlad Korolev", email = "vlad@v-lad.org"}
]
classifiers = [

]
license = {text = "Apache Software License 2.0"}
dependencies = [
    "typer",  # CLI
    "toml",  # Config parsing
    "streamlit"  # Web application framework

]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/vladistan/crystalia_collector/issues"
changelog = "https://github.com/vladistan/crystalia_collector/blob/master/changelog.md"
homepage = "https://github.com/vladistan/crystalia_collector"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
