[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crystalia-collector"
version = "0.1.1"
description = "Crystalia Collector: Generate Dataset Descriptors for Large Datasets"
readme = "README.md"
authors = [
  {name = "Vlad Korolev", email = "vlad@v-lad.org"}
]
maintainers = [
  {name = "Vlad Korolev", email = "vlad@v-lad.org"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Software Development :: Data Engineering",
]
dependencies = [
    "typer>=0.4.0",  # CLI
    "toml>=0.10.2",  # Config parsing
    "boto3>=1.18.0",  # AWS SDK
]
keywords = ["knowledge-graph", "provenance", "data-engineering"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "coverage>=6.0",  # testing
    "mypy>=0.910",  # linting
    "pytest>=6.2",  # testing
    "ruff>=0.3.5",  # linting
    "tox>=3.14.0",
]

[project.scripts]
crystalia-collector = "crystalia_collector.app:app"


[project.urls]

bugs = "https://github.com/Ebiquity/crystalia-collector/issues"
changelog = "https://github.com/Ebiquity/crystalia-collector/blob/master/changelog.md"
homepage = "https://github.com/Ebiquity/crystalia-collector"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
